# fsc-amlt

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
fsc/: __init__.py  amlt_parser.py  app.py  cache.py  cli.py  data.py  models.py  sync.py  ui.py  utils.py
fsc/screens/: __init__.py  base.py  detail_screen.py  log_screen.py  main_screen.py
fsc/widgets/: __init__.py
